--- a/HvZ_p/res/layout/report.xml
+++ b/HvZ_p/res/layout/report.xml
@@ -11,8 +11,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:inputType="number"
-        android:text="@string/zombie_label" />
+        android:inputType="number" />
+        <!-- android:text="@string/zombie_label"-->
 
     <EditText
         android:id="@+id/human"
@@ -20,8 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="number"
-        android:text="@string/human_label" />
-
+        android:text="@string/human_label" />
     <TimePicker
         android:id="@+id/time"
         android:layout_width="wrap_content"
@@ -31,8 +30,7 @@
         android:id="@+id/date"
         android:layout_width="296dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
-
+        android:layout_gravity="center" />
     <Button
         android:id="@+id/reportKill"
         android:layout_width="96dp"
@@ -40,10 +38,5 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="Report Kill" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Report A Kill!!" />
 
 </LinearLayout>
