--- a/HvZ_p/res/layout/main.xml
+++ b/HvZ_p/res/layout/main.xml
@@ -28,19 +28,19 @@
             android:text="Report A Kill" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/mini_map"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="View Mini Map" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/shoot_flare"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Flare Gun" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/strategy_map"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Strategy Map" />
