--- a/HvZ_p/res/layout/players.xml
+++ b/HvZ_p/res/layout/players.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:scrollbars="vertical" >
 
-	<TextView
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:text="PlayerList!!"
-	    />
+    <TableLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/table"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:stretchColumns="*" >
+d
+    </TableLayout>
 
-</LinearLayout>
+</ScrollView>
