--- a/HvZ_p/res/layout/mini_map.xml
+++ b/HvZ_p/res/layout/mini_map.xml
@@ -28,6 +28,6 @@
         android:id="@+id/flare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Shoot Flare" />
+        android:text="Shoot Flare Gun" />
     
 </FrameLayout>
