--- a/HvZ_p/res/layout/profile.xml
+++ b/HvZ_p/res/layout/profile.xml
@@ -5,14 +5,32 @@
     android:layout_height="match_parent"
     android:gravity="center|center_vertical|right"
     android:orientation="vertical" >
-    
-    <EditText
-        android:id="@+id/playerId"
-        android:layout_width="200dp"
+
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:inputType="number"
-        android:text="@string/id_label" />
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/labelId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/codeLabel"
+            android:textSize="20sp" />
+
+        <EditText
+            android:id="@+id/playerId"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:inputType="number"
+            android:text="@string/id_label" >
+
+            <requestFocus />
+        </EditText>
+    </LinearLayout>
     
     <Button
         android:id="@+id/save"
