--- a/HvZ_p/res/layout/profile.xml
+++ b/HvZ_p/res/layout/profile.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:inputType="number"
+            android:maxLength="5"
             android:text="@string/id_label" >
 
             <requestFocus />
