--- a/HvZ_p/res/layout/report.xml
+++ b/HvZ_p/res/layout/report.xml
@@ -11,7 +11,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:inputType="number" />
+        android:inputType="number"
+        android:maxLength="5" />
         <!-- android:text="@string/zombie_label"-->
 
     <EditText
@@ -20,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:inputType="number"
-        android:text="@string/human_label" />
+        android:text="@string/human_label"
+        android:maxLength="5" />
     <TimePicker
         android:id="@+id/time"
         android:layout_width="wrap_content"
