--- a/HvZ_p/res/layout/main.xml
+++ b/HvZ_p/res/layout/main.xml
@@ -12,31 +12,31 @@
 
     <LinearLayout
         android:id="@+id/linearLayout1"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <Button
             android:id="@+id/player_list"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Player List" />
 
         <Button
             android:id="@+id/report_kill"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Report A Kill" />
 
         <Button
             android:id="@+id/mini_map"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="View Mini Map" />
 
         <Button
             android:id="@+id/shoot_flare"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Shoot Flare Gun" />
 
@@ -48,7 +48,7 @@
             
         <Button
             android:id="@+id/profile"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Profile" />
     </LinearLayout>
