--- a/HvZ_p/res/layout/mini_map.xml
+++ b/HvZ_p/res/layout/mini_map.xml
@@ -28,6 +28,18 @@
         android:id="@+id/flare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="left|top"
+        android:layout_margin="5dip"
+        android:padding="5dip"
         android:text="Shoot Flare Gun" />
-    
+
+    <Button
+        android:id="@+id/me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|top"
+        android:layout_margin="5dip"
+        android:padding="5dip"
+        android:text="Where am I?" />
+
 </FrameLayout>
